[package]
name = "reggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false }

# Bevy plugins
bevy_prototype_lyon = "0.7"
bevy_kira_audio = "0.13"
bevy_rapier2d = "0.19"
bevy-inspector-egui = "0.15.0-pre.0"
bevy_tweening = "0.6"
iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", branch = "main" }

fastrand = "1.7"

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/wayland",
    "bevy_kira_audio/ogg",
]
exit_timeout = []

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable extra optimizations for release
[profile.release]
lto = "thin"

# No optimizations for faster CI builds
[profile.dev-ci]
inherits = "dev"
opt-level = 0

[profile.dev-ci.package."*"]
opt-level = 0
