[package]
name = "reggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2",
] }

# Bevy plugins
bevy_prototype_lyon = "0.9"
bevy_kira_audio = { version = "0.16", features = ["ogg"] }
bevy_rapier2d = "0.22"
bevy-inspector-egui = "0.19"
bevy_tweening = "0.8"
fastrand = "2.0"

[features]
dev = ["bevy/bevy_dylib"]
exit_timeout = []

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable extra optimizations for release
[profile.release]
lto = "thin"
codegen-units = 1

# No optimizations for faster CI builds
[profile.dev-ci]
inherits = "dev"
opt-level = 0

[profile.dev-ci.package."*"]
opt-level = 0
